[package]
name = "iot-data-server"
version = "0.1.0"
authors = ["Oleg Okhotnikov <olegnet@gmail.com>"]
repository = "https://github.com/olegnet/iot-data-server"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
