[package]
name = "iot-data-server"
version = "0.1.0"
authors = ["Oleg Okhotnikov <olegnet@gmail.com>"]
repository = "https://github.com/olegnet/iot-data-server"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
env_logger = "0.9.0"
deadpool-postgres = "0.9.0"
tokio = { version = "1.12.0", features = ["full"] }
tokio-postgres = { version = "0.7.3", features = ["runtime"] }
thiserror = "1.0.30"
