[package]
name = "iot-data-server"
version = "0.1.0"
authors = ["Oleg Okhotnikov <olegnet@gmail.com>"]
repository = "https://github.com/olegnet/iot-data-server"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
env_logger = "0.9.0"
deadpool-postgres = "0.9.0"
tokio = { version = "1.20.1", features = ["full"] }
tokio-postgres = { version = "0.7.6", features = ["runtime"] }
anyhow = "1.0.60"